feat: add steward and update CI (#17)
Co-authored-by: m.rogozhnikov <m.rogozhnikov@tinkoff.ru>